# cpp-freetype

./: CMakeLists.txt  bootstrap_d.sh  bootstrap_r.sh  doxy.config.in
cmake/: CMakeLists.txt
cmake/Modules/: CMakeLists.txt  FindCppFreetype.cmake  FindFreetype2.cmake
docs/pages/: mainpage.h
include/: CMakeLists.txt
include/cppfreetype/: AssignmentPair.h  CPtr.h  Face.h  GlyphSlot.h  Library.h  Memory.h  Module.h  ModuleClass.h  OpenArgs.h  Outline.h  Parameter.h  RefPtr.h  Size.h  SizeRequest.h  Untag.h  cppfreetype.h  types.h
src/: CMakeLists.txt  Face.cpp  GlyphSlot.cpp  Library.cpp  Memory.cpp  Module.cpp  ModuleClass.cpp  OpenArgs.cpp  Outline.cpp  Parameter.cpp  Size.cpp  SizeRequest.cpp  Untag.cpp  cppfreetype.cpp
test/tutorial/: CMakeLists.txt  main.cpp
